# rust-argparse

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  README.rst  bulk.yaml  index.html  search-index.js  vagga.yaml
argparse/: action.rs  bool.rs  generic.rs  generic.rs.orig  help.rs  index.html  mod.rs  mod.rs.orig  num.rs  parser.rs  parser.rs.orig  struct.Collect.html  struct.DecrBy.html  struct.IncrBy.html  struct.List.html  struct.Parse.html  struct.ParseCollect.html  struct.ParseList.html  struct.ParseOption.html  struct.Print.html  struct.PushConst.html  struct.Store.html  struct.StoreConst.html  struct.StoreFalse.html  struct.StoreOption.html  struct.StoreTrue.html  test_bool.rs  test_enum.rs  test_env.rs  test_float.rs  test_help.rs  test_int.rs  test_many.rs  test_optional.rs  test_parser.rs  test_pos.rs  test_str.rs  test_usage.rs  trait.FromCommandLine.html
argparse/action/: enum.Action.html  enum.ParseResult.html  index.html  trait.IArgAction.html  trait.IArgsAction.html  trait.IFlagAction.html  trait.TypedAction.html
argparse/parser/: index.html  struct.ArgumentParser.html  struct.Ref.html  struct.Var.html
examples/: greeting.rs  structure.rs  subcommands.rs
implementors/core/cmp/: trait.Eq.js  (+1 more)
src/: action.rs  bool.rs  custom.rs  from_cli.rs  generic.rs  help.rs  lib.rs  num.rs  parser.rs  print.rs  test_bool.rs  test_const.rs  test_enum.rs  test_env.rs  test_float.rs  test_help.rs  test_int.rs  test_many.rs  test_optional.rs  test_parser.rs  test_path.rs  test_pos.rs  test_print.rs  test_str.rs  test_usage.rs
(+11 files in other folders)
